syntax = "proto3";

package transmitter;

option go_package = "transmitter/proto";

// Сообщение, которое будет передаваться по стриму
message FrequencyData {
    string session_id = 1;
    double frequency = 2;
    int64 timestamp = 3;
}

// Пустое сообщение для запроса, так как нам не нужны входные параметры
message StreamRequest {}

// Определяем сервис 
service Transmitter {
    // Метод, который будет стримить данные клиенту
    // Клиент отправляет один запрос, а сервер отвечает потоком данных
    rpc StreamFrequency(StreamRequest) returns (stream FrequencyData) {}
}